@@ -8,6 +8,11 @@ Changes - Apache::Test change logfile
 
 =item 1.05-dev
 
+in the autogenerated t/conf/modperl_inc.pl don't add the project/lib
+directory, unless a special env var APACHE_TEST_LIVE_DEV is true. This
+is because some projects change things in project/blib and pushing
+project/lib on top of @INC, breaks the test suite for them [Stas]
+
 TestRun was using httpd.pid file to ensure that the server is killed
 before starting it, if the file existed. This was a problem on win32
 platforms, where a process scheduler tries to re-use the pids that
